# TicTacToe-RL

./: .gitignore  README.md  pyproject.toml  requirements.txt  trainingConfig.json
scripts/: initialize_value_function.py  trains_value_function.py
src/: __init__.py  setup.py
src/gameplay/: __init__.py  gameplay.py
src/tictactoe-rl/: __init__.py
src/tictactoe-rl/auto_training/: __init__.py
src/tictactoe-rl/manual_training/: __init__.py
src/tictactoe-rl/rl_init/: __init__.py
src/tictactoe-rl/utils/: __init__.py  board.py  policy.py  valueFunction.py
src/training/: __init__.py  autoTraining.py  manualTraining.py
src/utils/: __init__.py  board.py  policy.py  valueFunction.py
